--- a/Front - Proyecto/src/Usuario/Publicaciones.html
+++ b/Front - Proyecto/src/Usuario/Publicaciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vista General</title>
+    <title>Mis publicaciones</title>
     <link rel="stylesheet" href="output.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -50,6 +50,7 @@
             width: 52%;
         }
     }
+
     @media only screen and (min-width: 1495.20px) and (max-width: 1536px){
         #pub{
             width: 59%;
@@ -93,8 +94,8 @@
                 </div>
             </a>
 
-            <a href="Vista General.html" class="bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-1.5 md:mt-0">Vista General</a>
-            <a href="Publicaciones.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-1.5 md:mt-0">Mis publicaciones</a>
+            <a href="Vista General.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-1.5 md:mt-0">Vista General</a>
+            <a href="Publicaciones.html" class="bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-1.5 md:mt-0">Mis publicaciones</a>
             <a href="Comentarios.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-1.5 md:mt-0">Mis comentarios</a>
         </div>
         <hr class="">
@@ -210,7 +211,6 @@
                     </div>
                 </div>
             </div>
-            
             <div class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
                 <div class="mt-2">
                     <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
@@ -239,36 +239,8 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mb-5 ml-2 mr-2 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px]">
-                    <div class="">
-                        <span class="textito font-semibold ml-0 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">Comentaste:</span>
-                        <span class="textito text-gray-400 float-right md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">2024/01/25</span>
-                        <div class="float-right">
-                            <button class="-mt-2">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true" alt="" class="xl:mr-10">
-                            </button>
-                        </div>
-                    </div>
-                    <p>Yo los he visto cerca del estacionamiento, generalmente salen en la mañana.</p>
-                </div>
-                <button class="ml-2 mr-2">
-                    <div class="mt-2 mb-2 border-slate-300 border-[1.5px] rounded-md max-w-[40rem]">
-                        <a href="#oso" class="">
-                            <div class="mt-2">
-                                <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">UsuarioPromedioFisc</span>
-                                <span class="textito text-gray-400 ml-2 md:ml-4 lg:ml-2 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/13</span>
-                                <span class="textito text-gray-400 float-right xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1 xl:ml-10 xl:mr-10 lg:mr-0">Campus Levi Sasso</span>
-                                <article class="text-balance">
-                                    <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 mt-2 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px]"> Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</p>
-                                </article>
-                            </div>
-                        </a>
-                    </div>
-                </button>
-            </div>
-            <div class="hidden"> <!--En caso de no haber publicado ni comentado nada-->
-                <h3 class="font-bold">Nombre usuario no realizado publicaciones ni comentrios.</h3>
+            <div class="hidden"> <!--En caso de no haber publicado nada-->
+                <h3 class="font-bold">Nombre usuario no ha publicado nada.</h3>
             </div>
         </section>
 
