--- a/Front - Proyecto/src/Administrativo/VerificarBiologo.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo.html
@@ -178,90 +178,69 @@
         </div>
     </aside>
     <div class="bg-[#FFFFFF] flex flex-col lg:flex-row"> <!--Contenido completo-->                                                                                                                 <!--lg:w-[23rem] xl:w-[52%] xl:max-w-[58%] 2xl:min-w-[58%] 2xl:w-[60%]-->
-        <section id="pub" class="bg-[#F8F5F5] relative flex flex-col items-center top-[108px] md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:ml-[5rem] left-16 mr-5"> <!--Publicaciones-->
-            <div class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-0 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mt-2">
-                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
-                    <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/15</span>
-                    <span class="textito text-gray-400 float-right md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">Campus Levi Sasso</span>
-                    <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px] mt-2">Me encontré un gato solo saliendo de la U. Se llama pansito</p>
-                </div>
-                <div class="flex justify-center mt-5 mb-5">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-7.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
-                </div>
-                <div class="flex justify-around">
-                    <div class="flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="md:h-6 md:w-6 md:ml-8 xl:h-6 xl:w-6 xl:ml-8 h-5 lg:ml-0">
-                        <span class="textito font-bold text-[#241111]ml-2 xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">35</span>
-                    </div>
-                    <div class="flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 md:ml-8 lg:ml-6 ml-6">
-                        <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">11</span>
-                    </div>
-                    <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Nasua</span>
-                    <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 xl:mr-10 mr-10">Animal: Gato solo</span>
-                    <div>
-                        <button class="-mt-2">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true" alt="" class="xl:mr-10">
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mt-2">
-                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">UsuarioPromedioFisc</span>
-                    <span class="textito text-gray-400 ml-2 md:ml-4 lg:ml-2 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/13</span>
-                    <span class="textito text-gray-400 float-right xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1 xl:ml-10 xl:mr-10 lg:mr-0">Campus Levi Sasso</span>
-                    <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 mt-2 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px]">Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</p>
-                </div>
-                <div class="flex justify-center mt-5 mb-5">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Oso-Hormiguero.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
-                </div>
-                <div class="flex justify-around">
-                    <div class="flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="md:h-6 md:w-6 md:ml-8 xl:h-6 xl:w-6 xl:ml-8 h-5 lg:ml-0">
-                        <span class="textito font-bold text-[#241111]ml-2 xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">15</span>
-                    </div>
-                    <div class="flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 md:ml-8 lg:ml-6 ml-6">
-                        <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">14</span>
-                    </div>
-                    <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Vermilinguos</span>
-                    <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 xl:mr-10 mr-10">Animal: Oso hormiguero</span>
-                    <div>
-                        <button class="-mt-2">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true" alt="" class="xl:mr-10">
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mt-2">
-                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
-                    <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/15</span>
-                    <span class="textito text-gray-400 float-right md:ml-10 md:mr-6 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1 lg:mr-0 xl:ml-10 xl:mr-10">Campus Levi Sasso</span>
-                    <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px] mt-2">Esta magnífica ave se encuentra en los aldedores de la bilibioteca centarl de la UTP.</p>
-                </div>
-                <div class="flex justify-center mt-5 mb-5">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Colibri.png?raw=true" class="xl:max-h-[330px] xl:max-w-[420px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
-                </div>
-                <div class="flex justify-around">
-                    <div class="flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="md:h-6 md:w-6 md:ml-8 xl:h-6 lg:ml-0 xl:w-6 xl:ml-8 h-5">
-                        <span class="textito font-bold text-[#241111]ml-2 xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">35</span>
-                    </div>
-                    <div class="flex">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 md:ml-8 lg:ml-6 ml-6">
-                        <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">11</span>
-                    </div>
-                    <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Trochilidae</span>
-                    <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 mr-10 xl:mr-10">Animal: Colibrí</span>
-                    <div>
-                        <button class="-mt-2">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="" class="xl:mr-10">
-                        </button>
-                    </div>
-                </div>
+        <section id="pub" class="bg-[#F8F5F5] relative top-[108px] md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:ml-[5rem] left-16 mr-5 justify-center"> <!--Publicaciones-->
+            <div class="flex justify-center">
+                <table class="w-[50%] lg:w-[90%] border border-gray-300 rounded-lg overflow-hidden">
+                    <tbody>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <a>
+                                <td class="p-4"><input type="checkbox"></td>
+                                <td class="p-4">Charles Darwin</td>
+                                <td class="p-4">Solicitud para ser biologo verificado uwu</td>
+                            </a>
+                        </tr> 
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Gregor Mendel</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Galeno de Pergamo</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Hipocrates de Cos</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Aristoteles</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Edward Jenner</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Alexander Fleming</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Rachel Carson</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Carlos Linneo</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Juanito Pereira</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
+                            <td class="p-4"><input type="checkbox"></td>
+                            <td class="p-4">Ramona Flowers</td>
+                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
         <section class="fixed top-40 w-64 right-36">
@@ -269,20 +248,20 @@
                 <span class="text-lg flex justify-center"> Bandeja de entrada</span>
                 <div class="ml-2 mt-2">
                     <a href="">
-                        <div class="flex rounded-[50px] hover:bg-[#276B58] p-1 w-[2rem] ">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="icono-recibido" class="w-[20px] h-[20px]">
+                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] p-1 pl-3 w-[13rem]">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="icono-recibido" class="w-[20px] h-[20px] mt-[2px]">
                             <p class="ml-3">Recibido</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="flex rounded-[50px] hover:bg-[#276B58] p-1 ">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px]">
-                            <p class="ml-3">Desaprobado</p>
+                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] p-1 pl-3 w-[13rem]">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
+                            <p class="ml-3">Aprobado</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="flex rounded-[50px] hover:bg-[#276B58] p-1 ">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px]">
+                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] p-1 pl-3 w-[13rem]">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
                             <p class="ml-3">Desaprobado</p>
                         </div>
                     </a>
