--- a/Front - Proyecto/src/Administrativo/VerificarBiologo.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo.html
@@ -40,9 +40,17 @@
         content: '✕'; /* Icono para cerrar el aside */
     }
 
-
     .menu li a.active {
         background-color: #403d3d;
+    }
+
+    .tooltip {
+    opacity: 0;
+    transition: opacity 0.3s;
+    }
+
+    .relative:hover .tooltip {
+    opacity: 1;
     }
     /*sm=640px md=768px lg=1024px xl=1280px 2xl=1536px*/
     @media only screen and (min-width: 1280px) and (max-width: 1495.20px){
@@ -182,65 +190,150 @@
             <div class="flex justify-center">
                 <table class="w-[50%] lg:w-[90%] border border-gray-300 rounded-lg overflow-hidden">
                     <tbody>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <a>
-                                <td class="p-4"><input type="checkbox"></td>
-                                <td class="p-4">Charles Darwin</td>
-                                <td class="p-4">Solicitud para ser biologo verificado uwu</td>
-                            </a>
-                        </tr> 
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
+                            <td class="p-4">Charles Darwin</td>
+                            <td>Solicitud para ser biologo verificado uwu</td>
+                            <td>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button class="mt-2">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
+                                        <span class="block w-9 px-2 py-1 text-xs font-semibold">Ver</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="1" onclick="toggleAprobado('1')" class="aprobar">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
+                                        <span class="block w-15 px-2 py-1 text-xs font-semibold">Aprobar</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="2" onclick="toggleRechazado('2')" class="rechazar">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
+                                        <span class="block w-[4rem] px-2 py-1 text-xs font-semibold">Rechazar</span>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Gregor Mendel</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                            <td>Solicitud para ser biologo verificado chi</td>
+                            <td>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button class="mt-2">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
+                                        <span class="block w-9 px-2 py-1 text-xs font-semibold">Ver</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="3" onclick="toggleAprobado('3')" class="aprobar">
+                                        <img id="palomita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
+                                        <span class="block w-15 px-2 py-1 text-xs font-semibold">Aprobar</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="4" onclick="toggleRechazado('4')" class="rechazar">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
+                                        <span class="block w-[4rem] px-2 py-1 text-xs font-semibold">Rechazar</span>
+                                    </div>
+                                </div>
+                            </td>
                         </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Galeno de Pergamo</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                            <td>Solicitud para ser biologo verificado chi</td>
+                            <td>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button class="mt-2">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
+                                        <span class="block w-9 px-2 py-1 text-xs font-semibold">Ver</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="5" onclick="toggleAprobado('5')" class="aprobar">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
+                                        <span class="block w-15 px-2 py-1 text-xs font-semibold">Aprobar</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="6" onclick="toggleRechazado('6')" class="rechazar">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
+                                        <span class="block w-[4rem] px-2 py-1 text-xs font-semibold">Rechazar</span>
+                                    </div>
+                                </div>
+                            </td>
                         </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
+                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Hipocrates de Cos</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Aristoteles</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Edward Jenner</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Alexander Fleming</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Rachel Carson</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Carlos Linneo</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Juanito Pereira</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
-                        </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-white">
-                            <td class="p-4"><input type="checkbox"></td>
-                            <td class="p-4">Ramona Flowers</td>
-                            <td class="p-4">Solicitud para ser biologo verificado chi</td>
+                            <td>Solicitud para ser biologo verificado chi</td>
+                            <td>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button class="mt-2">
+                                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
+                                        <span class="block w-9 px-2 py-1 text-xs font-semibold">Ver</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="aprobarBT">
+                                        <img id="palomita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
+                                        <span class="block w-15 px-2 py-1 text-xs font-semibold">Aprobar</span>
+                                    </div>
+                                </div>
+                                <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                                    <button id="rechazarBT">
+                                        <img id="equisd" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
+                                    </button>
+                                    <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
+                                        <span class="block w-[4rem] px-2 py-1 text-xs font-semibold">Rechazar</span>
+                                    </div>
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="flex justify-center">
+                <div class=" w-[50%] lg:w-[90%] bg-[#FFFFFF] ">
+                    <div class="flex p-4">
+                        <button id="aprobarBT" class="flex bg-[#D7EFFF] p-2 rounded-md">
+                            <img id="palomita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true" class="mr-1">
+                            Aprobar
+                        </button>
+                        <button id="rechazarBT" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md">
+                            <img id="equisd" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true" class="h-5 w-5 mt-[3px] mr-1">
+                            Rechazar
+                        </button>
+                    </div>
+                    <hr>
+                    <div>
+                        <h2> Solicitud para ser biologo verificado uwu </h2>
+                    </div>
+                    <div class="">
+                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Charles%20Darwin.png?raw=true"> 
+                        <p>Charles Darwin</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="fixed top-40 w-64 right-36">
@@ -288,5 +381,6 @@
         </section>                                                                  <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
