--- a/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
+++ b/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
@@ -62,7 +62,7 @@
     
     </style>
 </head>
-<body class="bg-white w-full h-full box-border">
+<body class="bg-white w-full h-full box-border inicio">
     <header class="w-full bg-[#276B58] fixed z-[2]">
         <div class="flex items-center justify-between px-4 py-2 ">
             <div class="flex items-center md:ml-4 ">
@@ -277,11 +277,11 @@
                 </div>
             </div>
             <div class="mt-10 flex justify-center">
-                <button class="bg-[#276B58] w-full h-7 absolute bottom-0">
-                    <a href="#pub">
+                <div class="mt-10 flex justify-center">
+                    <a href="#pub" class="bg-[#276B58] w-full h-7 text-center text-white absolute bottom-0">
                         Ir arriba
                     </a>
-                </button>
+                </div>
             </div>
         </section>
         <div class="relative">
